--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,7 @@
         "scripts": "scripts.php"
     },
     "archive": {
-        "exclude": [
-            "node_modules", 
-            "!/app"
-        ]
+        "exclude": ["node_modules", "!/app"]
     }
 }
+
