bug fix language ru_RU.
Signed-off-by: neicv <neicv@mail.ru>

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         {
 			"name": "Friendly-IT",
             "email": "info@friendly-it.ru",
-            "homepage": "http://search.friendly-it.ru/"
+            "homepage": "http://pagekit.friendly-it.ru/"
         }
     ],
     "extra": {
